<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".QuizActivity">


    <ImageButton
        android:id="@+id/bck_to_topicDescriptionPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/bck_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/quiz_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/quiz"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:max="100"
        android:progress="0"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/ash"
        app:cardCornerRadius="10dp">

        <!-- Question Text -->
        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp"
            android:text="@string/quiz_question"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- RadioGroup for multiple choices -->
        <ImageButton
            android:id="@+id/quiz_flag_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:backgroundTint="@color/ash"
            android:layout_marginTop="24dp"
            android:src="@drawable/flag1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/choicesRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice1RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light_300"
                android:text="@string/choice_1" />

            <RadioButton
                android:id="@+id/choice2RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light_300"
                android:text="@string/choice_2" />

            <RadioButton
                android:id="@+id/choice3RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light_300"
                android:text="@string/choice_3" />

            <RadioButton
                android:id="@+id/choice4RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light_300"
                android:text="@string/choice_4" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <!-- Submit Button -->
    <Button
        android:id="@+id/submitAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/quiz_submit_answer"
        android:textStyle="bold" />

    <!-- Next Button -->
    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/quiz_next_question"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>