<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/slct_bg"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/slct_bg_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/slct_bg_img"
            android:scaleY="3"
            app:srcCompat="@drawable/vec_2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/v1_logo_2"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            tools:layout_editor_absoluteX="0dp"
            android:contentDescription="@string/logo"/>

    </RelativeLayout>

    <Button
        android:id="@+id/slct_sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slct_bg"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/slct_signin"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/slct_sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slct_sign_in_btn"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/dark_green"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/slct_signup"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>